...
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:orientation="vertical">

        <!-- TextView that displays the description -->
        <TextView
            android:id="@+id/entry_title"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:ellipsize="end"
            android:maxLength="20"
...
            android:textColor="#8B8B8B"
            app:fontFamily="@font/ubuntu_medium"
            tools:text="ALC Challenge 2.0 Day 2" />

        <!-- TextView that displays the description -->
        <TextView
            android:id="@+id/entry_description"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLength="70"
            android:maxLines="2"
...
