...
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/tv_welcome"
        app:layout_constraintTop_toTopOf="@+id/tv_welcome" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView_journalEntries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/backgroundColor"
        android:clipToPadding="false"
        android:paddingBottom="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:tint="@android:color/white"
...
