...
        android:textColor="#84FFFFFF"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/emailCreateAccountButton"
        app:layout_constraintTop_toBottomOf="@+id/emailCreateAccountButton" />

    <TextView
        android:id="@+id/tv_sign_in"
        android:onClick="openSignInActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="24dp"
...
